partial fix for scrollbars in popups on mobile devices

--- a/rws.css
+++ b/rws.css
@@ -120,3 +120,26 @@ div.olControlPermalink > a > img{
 #permalinkdiv p {
     margin: 4px;
 }
+
+/* rather clumsy fix for showing scrollbars in popups on (some) mobile devices */
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 12px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ffffff;
